fix logo, venue, and hamburger menu vertical alignment by updating offset calculations to match the real logo height of 55px

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -266,7 +266,7 @@ Navigation
   position: absolute;
   height: 26px;
   right: 10px;
-  top: 46px;
+  top: 64px;
   visibility: hidden;
   transition: all 300ms ease-in-out;
 }
@@ -385,7 +385,7 @@ header {
   .member-actions {
     position: absolute;
     right: 0;
-    top: 50px;
+    top: 68px;
     transition: all 300ms ease-in-out;
   }
 }
